renamed tests dir

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sprint is a high-performance, 5KB (gzipped) DOM library for modern browsers. Sprint notably shines on bandwidth and resource constrained devices such as phones and tablets.",
   "main": "",
   "directories": {
-    "test": "__tests__"
+    "test": "tests"
   },
   "scripts": {
     "test": "jest"
