Update package.json for fork

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "sprintjs",
+  "name": "sprint-js",
   "version": "0.1.0",
   "description": "A tiny, lightning fast jQuery-like library for modern browsers.",
   "main": "sprint.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:bendc/sprint.git"
+    "url": "git@github.com:philplckthun/sprint.git"
   },
   "author": "Benjamin De Cock",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bendc/sprint/issues"
   },
-  "homepage": "https://github.com/bendc/sprint"
+  "homepage": "https://github.com/philplckthun/sprint"
 }
