--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Benjamin De Cock",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bendc/sprint/issues"
+    "url": "https://github.com/philplckthun/sprint/issues"
   },
   "homepage": "https://github.com/philplckthun/sprint"
 }
